--- a/public/frontend/index.html
+++ b/public/frontend/index.html
@@ -19,7 +19,7 @@
 		<div class="{{ $even ? 'color' : ''}}">
 			<p> Name: {{ prod.name }} </p>
 			<p> Preis: {{ prod.price }} {{ currency }} </p>
-			<img ng-src="/img/{{ prod.picture.url }}" style="max-width: 100px; height: auto;">
+			<img ng-src="/media/{{ prod.picture.url }}" style="max-width: 100px; height: auto;">
 		</div>
 	</div>
 	<a href="admin" style="margin-top: 50px; font-size: 10px; display: inherit;">Adminbereich</a>
