worked on media upload

--- a/public/backend/index.html
+++ b/public/backend/index.html
@@ -80,6 +80,7 @@
 		<div>
 			<h3>Media</h3>
 			<button ng-click="show_uploader()" id="show_uploader">Add</button>
+			<input type="file" name="Image" id="upload-input">
 			<div id="uploader">
 				<form method="post" action="/media/upload/" enctype="multipart/form-data">
 					<input type="file" name="Image">
