added cookie support

--- a/public/frontend/index.html
+++ b/public/frontend/index.html
@@ -22,6 +22,6 @@
 			<img ng-src="/media/{{ prod.picture.url }}" style="max-width: 100px; height: auto;">
 		</div>
 	</div>
-	<a href="admin" style="margin-top: 50px; font-size: 10px; display: inherit;">Adminbereich</a>
+	<a href="admin/login" style="margin-top: 50px; font-size: 10px; display: inherit;">Adminbereich</a>
   </body>
 </html>
