--- a/public/backend/index.html
+++ b/public/backend/index.html
@@ -45,12 +45,7 @@
   </head>
   <body ng-controller="shopController" ng-cloak>
 	<h1>Admin Interface</h1>
-	<div ng-hide="success">
-		<input type="text" name="user" id="user" placeholder="User">
-		<input type="password" name="pswd" id="pswd" placeholder="Password">
-		<button name="submit" id="submit" ng-click="auth()">Send</button>
-	</div>
-	<div ng-show="success">
+	<div>
 		<div style="background-color: #FAFAFA">
 			<h3>Products</h3>
 			<div ng-repeat="prod in products track by $index">
