--- a/public/backend/login.html
+++ b/public/backend/login.html
@@ -1,1 +1,5 @@
-<h1>scurr</h1>
+<form method="post" action="/admin">
+    <input name="name">
+    <input name="password">
+    <button type="submit">Senden</button>
+</form>
